# hs-bindgen

./: .gitignore  .hsbindgen  Cargo.toml  README.md  flake.nix  hsbindgen.toml
.github/workflows/: main.yml  rust.yml
src/: lib.rs
