[package]
authors = ["Yvan Sraka <yvan@sraka.xyz>"]
description = "Handy macro to generate C-FFI bindings to Rust for Haskell"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "hs-bindgen"
repository = "https://github.com/yvan-sraka/hs-bindgen"
rust-version = "1.64.0"
version = "0.9.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
hs-bindgen-attribute = { version = "0.9", default-features = false }
hs-bindgen-traits = { version = "0.9", default-features = false }

[features]
default = ["std"]
full = ["reflexive", "std"]
reflexive = ["hs-bindgen-attribute/reflexive"]
std = ["hs-bindgen-traits/std"]
